--- a/angular.json
+++ b/angular.json
@@ -53,6 +53,22 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "development": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
+            },
+            "local": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           }
         },
@@ -64,6 +80,12 @@
           "configurations": {
             "production": {
               "browserTarget": "shatterblock:build:production"
+            },
+            "development": {
+              "browserTarget": "shatterblock:build:development"
+            },
+            "local": {
+              "browserTarget": "shatterblock:build:local"
             }
           }
         },
@@ -118,6 +140,12 @@
           "configurations": {
             "production": {
               "devServerTarget": "shatterblock:serve:production"
+            },
+            "development": {
+              "browserTarget": "shatterblock:serve:development"
+            },
+            "local": {
+              "browserTarget": "shatterblock:serve:local"
             }
           }
         },
