--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "ngx-cookie-service": "^2.1.0",
     "ngx-drag-scroll": "^7.1.4",
     "ngx-progressbar": "^2.1.1",
-    "rxjs": "^6.4.0",
+    "rxjs": "6.4.0",
+    "rxjs-compat": "^6.4.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
