--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^3.1.2",
+    "ngx-ckeditor": "^0.4.0",
     "ngx-cookie-service": "^2.1.0",
     "ngx-drag-scroll": "^7.1.4",
     "ngx-progressbar": "^2.1.1",
